# Sharepoint-Project

./: .gitignore  Artitificial Intelligence.docx  LICENSE  README.md  __Root__.txt  access_token.txt  downloaded_file  function_app.py  main.py  project_details.docx  pyproject.toml  readme  tables.docx  test.txt
Something here/: project_details.docx
app/adapters/: fastapi_app.py
app/api/: auth.py  drives.py  list_items.py  lists.py  router.py  sites.py
app/core/: auth.py  auth_models.py  azure_deps.py  config.py  deps.py  filter.py  logging.py
app/core/exceptions/: __init__.py  auth_exceptions.py  base_exceptions.py  error_response.py  sharepoint_exceptions.py
app/data/: auth_models.py  drive.py  list.py  list_item.py  site.py
app/managers/: sharepoint_auth_manager.py  sharepoint_drive_manager.py  sharepoint_list_item_manager.py  sharepoint_list_manager.py  sharepoint_site_manager.py
app/repositories/: drive_repository.py  list_item_repository.py  list_repository.py  site_repository.py
app/services/: auth_service.py  drive_service.py  list_item_service.py  list_service.py  site_service.py
app/utils/: graph_client.py  mapper.py  retry_policy.py  token_cache.py
auth/: msal_token.py
azure_routes/: drive.py
common/: settings.py
services/download/: download_file.py
services/retrieve/: drive_id.py  graph_headers.py  sharepoint.py  site_id.py
