[project]
name = "Sharepoint-Project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rooman Abdul Latif", email = "Rooman.AbdulLatif@imperiumdynamics.com"},
]
dependencies = ["pydantic>=2.12.4", "msal>=1.34.0", "pydantic-settings>=2.11.0", "requests>=2.32.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python main.py"